Changes after review

--- a/app/templates/accounts/cognito_login.html
+++ b/app/templates/accounts/cognito_login.html
@@ -1,1 +1,7 @@
+{% comment %} 
+Default account login screen unnecessary has local login option and forces user to have 
+to hit two buttons to log in to Amazon Cognito.  The snippet below redirects the user
+to the Amazon Cognito login screen with one button that navigates directly to
+Cognito.
+{% endcomment %}
 <meta http-equiv="REFRESH" content="0;url=../amazon-cognito/login">
